--- a/Tyuiu.PozhdinAA.Sprint6.Task2.V25.Test/Tyuiu.PozhdinAA.Sprint6.Task2.V25.Test.csproj
+++ b/Tyuiu.PozhdinAA.Sprint6.Task2.V25.Test/Tyuiu.PozhdinAA.Sprint6.Task2.V25.Test.csproj
@@ -58,7 +58,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Tyuiu.PozhdinAA.Sprint6.Task2.V25.Lib\Tyuiu.PozhdinAA.Sprint6.Task2.V25.Lib.csproj">
       <Project>{4393a75c-5520-4597-b42e-d981b7aa0e5a}</Project>
-      <Name>Tyuiu.GornovTA.Sprint6.Task2.V25.Lib</Name>
+      <Name>Tyuiu.PozhdinAA.Sprint6.Task2.V25.Lib</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
