--- a/Tyuiu.PozhdinAA.Sprint6.Task4.V18.Test/Tyuiu.PozhdinAA.Sprint6.Task4.V18.Test.csproj
+++ b/Tyuiu.PozhdinAA.Sprint6.Task4.V18.Test/Tyuiu.PozhdinAA.Sprint6.Task4.V18.Test.csproj
@@ -5,11 +5,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CE10659A-D1C3-456F-8503-DFC574E1BCD5}</ProjectGuid>
+    <ProjectGuid>{0DC4674E-68DE-4C2D-B164-2C4534290604}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tyuiu.LoginovMV.Sprint6.Task3.V29.Test</RootNamespace>
-    <AssemblyName>Tyuiu.LoginovMV.Sprint6.Task3.V29.Test</AssemblyName>
+    <RootNamespace>Tyuiu.PozhdinAA.Sprint6.Task4.V18.Test</RootNamespace>
+    <AssemblyName>Tyuiu.PozhdinAA.Sprint6.Task4.V18.Test</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -56,9 +56,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Tyuiu.PozhdinAA.Sprint6.Task3.V29.Lib\Tyuiu.PozhdinAA.Sprint6.Task3.V29.Lib.csproj">
-      <Project>{f945c6ba-8ed8-4c95-9f1b-4a8c2241b080}</Project>
-      <Name>Tyuiu.PozhdinAA.Sprint6.Task3.V29.Lib</Name>
+    <ProjectReference Include="..\Tyuiu.PozhdinAA.Sprint6.Task4.V18.Lib\Tyuiu.PozhdinAA.Sprint6.Task4.V18.Lib.csproj">
+      <Project>{4497d10a-846b-4371-bf43-917052edbdaf}</Project>
+      <Name>Tyuiu.PozhdinAA.Sprint6.Task4.V18.Lib</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
