--- a/Tyuiu.PozhdinAA.Sprint6.Task4.V18/Tyuiu.PozhdinAA.Sprint6.Task4.V18.csproj
+++ b/Tyuiu.PozhdinAA.Sprint6.Task4.V18/Tyuiu.PozhdinAA.Sprint6.Task4.V18.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{855C9E9C-1ACD-4DAB-84EB-5D5322834A5E}</ProjectGuid>
+    <ProjectGuid>{DFBC28A5-EC0B-449C-ABB7-C085240BF5CA}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Tyuiu.PozhdinAA.Sprint6.Task3.V29</RootNamespace>
-    <AssemblyName>Tyuiu.PozhdinAA.Sprint6.Task3.V29</AssemblyName>
+    <RootNamespace>Tyuiu.PozhdinAA.Sprint6.Task4.V18</RootNamespace>
+    <AssemblyName>Tyuiu.PozhdinAA.Sprint6.Task4.V18</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -81,9 +82,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Tyuiu.PozhdinAA.Sprint6.Task3.V29.Lib\Tyuiu.PozhdinAA.Sprint6.Task3.V29.Lib.csproj">
-      <Project>{f945c6ba-8ed8-4c95-9f1b-4a8c2241b080}</Project>
-      <Name>Tyuiu.PozhdinAA.Sprint6.Task3.V29.Lib</Name>
+    <ProjectReference Include="..\Tyuiu.PozhdinAA.Sprint6.Task4.V18.Lib\Tyuiu.PozhdinAA.Sprint6.Task4.V18.Lib.csproj">
+      <Project>{4497d10a-846b-4371-bf43-917052edbdaf}</Project>
+      <Name>Tyuiu.PozhdinAA.Sprint6.Task4.V18.Lib</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
